<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_anchorGravity="center"
    tools:context=".AddEntryActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/newEntryTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/new_entry"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageViewCar3"
                    android:layout_width="match_parent"
                    android:layout_height="174dp"
                    app:srcCompat="@mipmap/car" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="30dp"
                    android:gravity="center|center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonService"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:text="@string/category_service" />

                    <RadioButton
                        android:id="@+id/radioButtonExpense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:text="@string/category_expense" />

                    <RadioButton
                        android:id="@+id/radioButtonOther"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:text="@string/category_other" />
                </RadioGroup>

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:text="@string/date" />

                <EditText
                    android:id="@+id/editTextMileage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:text="@string/mileage" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/editTextPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="@string/place" />

                <EditText
                    android:id="@+id/editTextCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="64dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:text="@string/cost" />

                <EditText
                    android:id="@+id/editTextItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="@string/item" />

                <Button
                    android:id="@+id/addNewEntryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/add_entry" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>