<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileContentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewCar"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@mipmap/car" />

            <Button
                android:id="@+id/chooseCarButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:onClick="goToChoosingCar"
                android:text="@string/choose_car" />

            <Button
                android:id="@+id/addCarButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="goToAddingCar"
                android:text="@string/add_car" />

            <Button
                android:id="@+id/workshopBaseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="goToWorkshopsList"
                android:text="@string/workshop_database" />

            <Button
                android:id="@+id/deleteProfileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:onClick="deleteProfile"
                android:text="@string/delete_profile" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>