<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntriesListActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/entriesListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewCar3"
            android:layout_width="match_parent"
            android:layout_height="126dp"
            app:srcCompat="@mipmap/car" />

        <Button
            android:id="@+id/addEntryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addNewEntry"
            android:text="@string/add_entry" />

        <Button
            android:id="@+id/carInfoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:onClick="goToCarInfo"
            android:text="@string/car_info" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/entries"
            android:textAlignment="center"
            android:textSize="24dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="goToEntry"
                    android:text="WPIS" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>